[package]
name = "columnar_trait"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
default = []
full = ["bitvec"]
bitvec = ["dep:bitvec"]

[dependencies]
arrayvec = "*"
bitvec = { version =  "1", optional = true }
wide = "*"
cache-size = "*"

[dev-dependencies]
criterion = "0.3"
